# gigsplitter

./: CHANGELOG.md  LICENSE  README.md  gigsplitter.cabal
src/: Deploy.hs  GigsplitterEmulator.hs  GigsplitterOffChain.hs  GigsplitterOnChain.hs
src/Validators/: DepositValidator.hs  PayoutValidator.hs  SplitValidator.hs
