cabal-version:      2.4
name:               gigsplitter
version:            0.1.0.0
synopsis: A Plutus app to split payments among band members
stability: experimental

-- A longer description of the package.
-- description:

homepage: https://github.com/coveloper/gigsplitter
bug-reports: https://github.com/coveloper
license:            MIT
license-file:       LICENSE
author:             Jon Bauer
maintainer:         https://github.com/coveloper
copyright: Covelop 2022
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    -- Modules exported by the library.
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.14.3.0

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

executable gigsplitter
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.14.3.0,
        gigsplitter

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite gigsplitter-test
    -- Base language which the package is written in.
    default-language: Haskell2010

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          MyLibTest.hs

    -- Test dependencies.
    build-depends:    base ^>=4.14.3.0
