cabal-version:      3.0
name:               gigsplitter
version:            0.1.0.0
synopsis: A Plutus app to split payments among band members
stability: experimental

-- A longer description of the package.
-- description:

homepage: https://github.com/coveloper/gigsplitter
bug-reports: https://github.com/coveloper
license:            MIT
license-file:       LICENSE
author:             Jon Bauer
maintainer:         https://github.com/coveloper
copyright: Covelop 2022
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang

    -- Modules exported by the library.
    exposed-modules:  
        --MyLib,
        Validators.DepositValidator

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base >= 4.9 && < 5,
        aeson -any,
        bytestring -any,
        containers -any,
        freer-extras -any,
        playground-common -any,
        plutus-contract -any,
        plutus-ledger -any,
        plutus-ledger-api -any,
        plutus-ledger-constraints -any,
        plutus-tx -any,
        plutus-tx-plugin -any,
        plutus-script-utils -any,
        text -any,
        lens -any,
        cardano-api, 
        cardano-binary,
      --additionals
        serialise -any,
        base16-bytestring,
        data-default,

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010